App UI Updated (Background Design Implemented)

--- a/app/src/main/res/layout/custom_add_route_toolbar.xml
+++ b/app/src/main/res/layout/custom_add_route_toolbar.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
@@ -25,7 +25,7 @@
         android:id="@+id/btnBackImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:backgroundTint="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
