--- a/app/src/main/res/layout/fragment_add_place.xml
+++ b/app/src/main/res/layout/fragment_add_place.xml
@@ -4,7 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_image"
     tools:context=".ui.addPlace.AddPlaceFragment">
+
+
 
     <include
         android:id="@+id/custom_toolbar"
@@ -22,6 +25,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         app:boxStrokeColor="@color/primary_color"
+        app:boxBackgroundColor="@color/white"
         app:hintTextColor="@color/primary_color"
         android:hint="@string/title_text"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,8 +51,9 @@
         android:layout_marginEnd="16dp"
         android:hint="@string/city_text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:boxStrokeColor="@color/primary_color"
         app:hintTextColor="@color/primary_color"
+        app:boxStrokeColor="@color/primary_color"
+        app:boxBackgroundColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleInputLayout">
 
@@ -70,9 +75,10 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:hint="@string/description_text"
-        app:boxStrokeColor="@color/primary_color"
         app:hintTextColor="@color/primary_color"
         app:layout_constraintEnd_toEndOf="parent"
+        app:boxStrokeColor="@color/primary_color"
+        app:boxBackgroundColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cityInputLayout">
 
